[gd_scene load_steps=10 format=3 uid="uid://dtnir7lcytqwn"]

[ext_resource type="Script" uid="uid://b1ugbpin2igk4" path="res://script/stage_2.gd" id="1_yse71"]
[ext_resource type="Texture2D" uid="uid://cibd3pyyshddn" path="res://asset/Free/Background/Green.png" id="2_ihvef"]
[ext_resource type="Texture2D" uid="uid://bjq66rf6hdo8t" path="res://asset/Free/Menu/Buttons/Back.png" id="3_ihvef"]
[ext_resource type="FontFile" uid="uid://bxxcy8wgcpdxa" path="res://asset/tirarium/fonts/PixelOperator8-Bold.ttf" id="3_o1ltp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rtw2f"]
texture = ExtResource("2_ihvef")
modulate_color = Color(0.637843, 0.637843, 0.637843, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oa1go"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbmy8"]
bg_color = Color(0.800491, 0.800491, 0.800491, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk1qb"]
bg_color = Color(0.625597, 0.625597, 0.625597, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dd4i"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yse71")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rtw2f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -82.0
offset_right = 99.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/normal = SubResource("StyleBoxFlat_5dd4i")
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/normal = SubResource("StyleBoxFlat_5dd4i")
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/normal = SubResource("StyleBoxFlat_5dd4i")
text = "3"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -427.5
offset_top = -216.5
offset_right = -372.5
offset_bottom = -157.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Button4" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
icon = ExtResource("3_ihvef")
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -268.0
offset_right = 424.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_o1ltp")
theme_override_font_sizes/font_size = 60
text = "Stage Level 2"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_stage_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_stage_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_stage_3_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button4" to="." method="_on_back_pressed"]
